--- a/index.html
+++ b/index.html
@@ -12,5 +12,27 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
 	</head>
-	<body></body>
+	<body>
+		<div class="app">
+			<header class="header">
+				<nav class="header__navbar">
+					<ul class="header__navbar-list">
+						<li class="header__navbar-item">Vào cửa hàng trên ứng dụng F8-Shop</li>
+						<li class="header__navbar-item">Kết nối</li>
+						<li></li>
+					</ul>
+					<ul class="header__navbar-list">
+						<li class="header__navbar-item">
+							<a href="" class="header__navbar-item-link">Thông báo</a>
+						</li>
+						<li class="header__navbar-item"><a href="" class="header__navbar-item-link">Trợ giúp</a></li>
+						<li class="header__navbar-item">Đặng kí</li>
+						<li class="header__navbar-item">Đăng nhập</li>
+					</ul>
+				</nav>
+			</header>
+			<div class="container"></div>
+			<footer class="footer"></footer>
+		</div>
+	</body>
 </html>
