--- a/index.html
+++ b/index.html
@@ -15,21 +15,23 @@
 	<body>
 		<div class="app">
 			<header class="header">
-				<nav class="header__navbar">
-					<ul class="header__navbar-list">
-						<li class="header__navbar-item">Vào cửa hàng trên ứng dụng F8-Shop</li>
-						<li class="header__navbar-item">Kết nối</li>
-						<li></li>
-					</ul>
-					<ul class="header__navbar-list">
-						<li class="header__navbar-item">
-							<a href="" class="header__navbar-item-link">Thông báo</a>
-						</li>
-						<li class="header__navbar-item"><a href="" class="header__navbar-item-link">Trợ giúp</a></li>
-						<li class="header__navbar-item">Đặng kí</li>
-						<li class="header__navbar-item">Đăng nhập</li>
-					</ul>
-				</nav>
+				<div class="grid">
+					<nav class="header__navbar">
+						<ul class="header__navbar-list">
+							<li class="header__navbar-item header__navbar-item--separate">Vào cửa hàng trên ứng dụng F8-Shop</li>
+							<li class="header__navbar-item">Kết nối</li>
+							<li></li>
+						</ul>
+						<ul class="header__navbar-list">
+							<li class="header__navbar-item">
+								<a href="" class="header__navbar-item-link">Thông báo</a>
+							</li>
+							<li class="header__navbar-item"><a href="" class="header__navbar-item-link">Trợ giúp</a></li>
+							<li class="header__navbar-item header__navbar-item--strong header__navbar-item--separate">Đăng kí</li>
+							<li class="header__navbar-item header__navbar-item--strong">Đăng nhập</li>
+						</ul>
+					</nav>
+				</div>
 			</header>
 			<div class="container"></div>
 			<footer class="footer"></footer>
