--- a/index.html
+++ b/index.html
@@ -21,22 +21,23 @@
 						<ul class="header__navbar-list">
 							<li class="header__navbar-item header__navbar-item--separate">Vào cửa hàng trên ứng dụng F8-Shop</li>
 							<li class="header__navbar-item">
-								Kết nối
-								<a href="" class="header__navbar-icon-link"><i class="fab fa-facebook"></i></a>
-								<a href="" class="header__navbar-icon-link"><i class="fab fa-instagram"></i></a>
+								<span class="header__navbar-icon--no-pointer">Kết nối</span>
+
+								<a href="" class="header__navbar-icon-link"><i class="header__navbar-icon fab fa-facebook"></i></a>
+								<a href="" class="header__navbar-icon-link"><i class="header__navbar-icon fab fa-instagram"></i></a>
 							</li>
 							<li></li>
 						</ul>
 						<ul class="header__navbar-list">
 							<li class="header__navbar-item">
 								<a href="" class="header__navbar-item-link">
-									<i class="fas fa-bell"></i>
+									<i class="header__navbar-icon fas fa-bell"></i>
 									Thông báo</a
 								>
 							</li>
 							<li class="header__navbar-item">
 								<a href="" class="header__navbar-item-link">
-									<i class="far fa-question-circle"></i>
+									<i class="header__navbar-icon far fa-question-circle"></i>
 									Trợ giúp</a
 								>
 							</li>
@@ -47,7 +48,7 @@
 				</div>
 			</header>
 			<div class="container"></div>
-			<footer class="footer"></footer>
+			<footer class="header__navbar-icon footer"></footer>
 		</div>
 	</body>
 </html>
