huy8_qr_code: Css cho QR code

--- a/index.html
+++ b/index.html
@@ -19,7 +19,20 @@
 				<div class="grid">
 					<nav class="header__navbar">
 						<ul class="header__navbar-list">
-							<li class="header__navbar-item header__navbar-item--separate">Vào cửa hàng trên ứng dụng F8-Shop</li>
+							<li class="header__navbar-item header__navbar-item--separate">
+								Vào cửa hàng trên ứng dụng F8-Shop
+								<div class="header__qr">
+									<img src="./assets/img/qr_code.png" alt="QR code" class="header__qr-img" />
+									<div class="header__qr-apps">
+										<a class="header__qr-link" href=""
+											><img src="./assets/img/app_store.png" alt="App Store" class="header__qr-download-img"
+										/></a>
+										<a class="header__qr-link" href=""
+											><img src="./assets/img/ch_play.png" alt="Google Play Store" class="header__qr-download-img"
+										/></a>
+									</div>
+								</div>
+							</li>
 							<li class="header__navbar-item">
 								<span class="header__navbar-icon--no-pointer">Kết nối</span>
 
