huy9_header_noti_css: Css for notify p1

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 							</li>
 							<li class="header__navbar-item">
 								<span class="header__navbar-icon--no-pointer">Kết nối</span>
-
 								<a href="" class="header__navbar-icon-link"><i class="header__navbar-icon fab fa-facebook"></i></a>
 								<a href="" class="header__navbar-icon-link"><i class="header__navbar-icon fab fa-instagram"></i></a>
 							</li>
@@ -47,6 +46,55 @@
 									<i class="header__navbar-icon fas fa-bell"></i>
 									Thông báo</a
 								>
+								<div class="header__notify">
+									<header class="header__notify-header">
+										<h3>Thông báo mới nhận</h3>
+									</header>
+									<ul class="header__notify-list">
+										<li class="header__notify-item header__notify-item--viewed">
+											<a href="" class="header__notify-link">
+												<img
+													src="https://cf.shopee.vn/file/978b9e4cb61c611aaaf58664fae133c5_tn"
+													alt="Ảnh sản phẩm"
+													class="header__notify-img"
+												/>
+												<div class="header__notify-info">
+													<span class="header__notify-name">Mỹ phẩm OHUI chính hãng</span>
+													<span class="header__notify-description">Chi tiết về mỹ phẩm OHUI chính hãng</span>
+												</div>
+											</a>
+										</li>
+										<li class="header__notify-item">
+											<a href="" class="header__notify-link">
+												<img
+													src="https://cf.shopee.vn/file/978b9e4cb61c611aaaf58664fae133c5_tn"
+													alt="Ảnh sản phẩm"
+													class="header__notify-img"
+												/>
+												<div class="header__notify-info">
+													<span class="header__notify-name">Mỹ phẩm OHUI chính hãng</span>
+													<span class="header__notify-description">Chi tiết về mỹ phẩm OHUI chính hãng</span>
+												</div>
+											</a>
+										</li>
+										<li class="header__notify-item header__notify-item--viewed">
+											<a href="" class="header__notify-link">
+												<img
+													src="https://cf.shopee.vn/file/978b9e4cb61c611aaaf58664fae133c5_tn"
+													alt="Ảnh sản phẩm"
+													class="header__notify-img"
+												/>
+												<div class="header__notify-info">
+													<span class="header__notify-name">Mỹ phẩm OHUI chính hãng</span>
+													<span class="header__notify-description">Chi tiết về mỹ phẩm OHUI chính hãng</span>
+												</div>
+											</a>
+										</li>
+									</ul>
+									<footer class="header__notify-footer">
+										<a href="" class="header__notify-footer-btn">Xem tất cả</a>
+									</footer>
+								</div>
 							</li>
 							<li class="header__navbar-item">
 								<a href="" class="header__navbar-item-link">
