huy10_header_noti_css_p2

--- a/index.html
+++ b/index.html
@@ -67,12 +67,14 @@
 										<li class="header__notify-item">
 											<a href="" class="header__notify-link">
 												<img
-													src="https://cf.shopee.vn/file/978b9e4cb61c611aaaf58664fae133c5_tn"
+													src="https://cf.shopee.vn/file/86c294aae72ca1db5f541790f7796260_tn"
 													alt="Ảnh sản phẩm"
 													class="header__notify-img"
 												/>
 												<div class="header__notify-info">
-													<span class="header__notify-name">Mỹ phẩm OHUI chính hãng</span>
+													<span class="header__notify-name"
+														>Mỹ phẩm OHUI chính hãng Mỹ phẩm OHUI chính hãng Mỹ phẩm OHUI chính hãng</span
+													>
 													<span class="header__notify-description">Chi tiết về mỹ phẩm OHUI chính hãng</span>
 												</div>
 											</a>
@@ -80,13 +82,16 @@
 										<li class="header__notify-item header__notify-item--viewed">
 											<a href="" class="header__notify-link">
 												<img
-													src="https://cf.shopee.vn/file/978b9e4cb61c611aaaf58664fae133c5_tn"
+													src="https://cf.shopee.vn/file/bf87b50b463f646bb7fb8a1a606d9ed2_tn"
 													alt="Ảnh sản phẩm"
 													class="header__notify-img"
 												/>
 												<div class="header__notify-info">
 													<span class="header__notify-name">Mỹ phẩm OHUI chính hãng</span>
-													<span class="header__notify-description">Chi tiết về mỹ phẩm OHUI chính hãng</span>
+													<span class="header__notify-description"
+														>Chi tiết về mỹ phẩm OHUI chính hãng Chi tiết về mỹ phẩm OHUI chính hãng Chi tiết về mỹ phẩm
+														Chi tiết về mỹ phẩm OHUI chính hãng OHUI chính hãng</span
+													>
 												</div>
 											</a>
 										</li>
