--- a/index.html
+++ b/index.html
@@ -116,5 +116,11 @@
 			<div class="container"></div>
 			<footer class="header__navbar-icon footer"></footer>
 		</div>
+		<div class="modal">
+			<div class="modal__overlay"></div>
+			<div class="modal__body">
+				<div class="modal__inner"></div>
+			</div>
+		</div>
 	</body>
 </html>
