--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
 		<div class="modal">
 			<div class="modal__overlay"></div>
 			<div class="modal__body">
-				<div class="modal__inner">
-					<!-- Authen form -->
-					<div class="auth-form">
+				<!-- Authen form -->
+				<div class="auth-form">
+					<div class="auth-form__container">
 						<div class="auth-form__header">
-							<h3 class="auth-formauth__heading">Đăng kí</h3>
+							<h3 class="auth-form__heading">Đăng kí</h3>
 							<span class="auth-form__switch-btn">Đăng nhập</span>
 						</div>
 						<div class="auth-form__form">
@@ -140,25 +140,25 @@
 						</div>
 						<div class="auth-form__aside">
 							<p class="auth-form__policy-text">
-								Bằng việc đăng kí, bạn đã đồng ý với Shoppe về
-								<a href="" class="auth-form__policy-link">Điều khoản dịch vụ</a> &
-								<a href="" class="auth-form__policy-link">Chính sách bảo mật</a>
+								Bằng việc đăng kí, bạn đã đồng ý với F8-Shop về
+								<a href="" class="auth-form__text-link">Điều khoản dịch vụ</a> &
+								<a href="" class="auth-form__text-link">Chính sách bảo mật</a>
 							</p>
 						</div>
 						<div class="auth-form__controls">
 							<button class="btn">TRỞ LẠI</button>
 							<button class="btn btn--primary">Đăng kí</button>
 						</div>
-						<div class="auth-form__socials">
-							<a href="" class="btn btn--with-icon">
-								<i class="fab fa-facebook-square"></i>
-								Kết nối với Facebook</a
-							>
-							<a href="" class="btn btn--with-icon">
-								<i class="fab fa-google"></i>
-								Kết nối với Google</a
-							>
-						</div>
+					</div>
+					<div class="auth-form__socials">
+						<a href="" class="btn btn--with-icon">
+							<i class="fab fa-facebook-square"></i>
+							Kết nối với Facebook</a
+						>
+						<a href="" class="btn btn--with-icon">
+							<i class="fab fa-google"></i>
+							Kết nối với Google</a
+						>
 					</div>
 				</div>
 			</div>
