huy16_form_register_css_p2

--- a/index.html
+++ b/index.html
@@ -147,17 +147,17 @@
 						</div>
 						<div class="auth-form__controls">
 							<button class="btn">TRỞ LẠI</button>
-							<button class="btn btn--primary">Đăng kí</button>
+							<button class="btn btn--primary">ĐĂNG KÍ</button>
 						</div>
 					</div>
 					<div class="auth-form__socials">
-						<a href="" class="btn btn--with-icon">
-							<i class="fab fa-facebook-square"></i>
-							Kết nối với Facebook</a
+						<a href="" class="btn btn--size-s btn--with-icon auth-form__socials--facebook">
+							<i class="fab fa-facebook-square auth-form__socials--icon"></i>
+							<span class="auth-form__socials--text">Kết nối với Facebook</span></a
 						>
-						<a href="" class="btn btn--with-icon">
-							<i class="fab fa-google"></i>
-							Kết nối với Google</a
+						<a href="" class="btn btn--size-s btn--with-icon auth-form__socials--google">
+							<i class="fab fa-google auth-form__socials--"></i>
+							<span class="auth-form__socials--text">Kết nối với Google</span></a
 						>
 					</div>
 				</div>
