--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 			<footer class="header__navbar-icon footer"></footer>
 		</div>
 		<!-- Modal layout -->
-		<div class="modal">
+		<!-- <div class="modal">
 			<div class="modal__overlay"></div>
-			<div class="modal__body">
-				<!-- Authen form -->
-				<div class="auth-form">
+			<div class="modal__body"> -->
+		<!-- Register form -->
+		<!-- <div class="auth-form">
 					<div class="auth-form__container">
 						<div class="auth-form__header">
 							<h3 class="auth-form__heading">Đăng kí</h3>
@@ -160,8 +160,46 @@
 							<span class="auth-form__socials--text">Kết nối với Google</span></a
 						>
 					</div>
-				</div>
-			</div>
-		</div>
+				</div> -->
+
+		<!-- Login form -->
+		<!-- <div class="auth-form">
+					<div class="auth-form__container">
+						<div class="auth-form__header">
+							<h3 class="auth-form__heading">Đăng kí</h3>
+							<span class="auth-form__switch-btn">Đăng nhập</span>
+						</div>
+						<div class="auth-form__form">
+							<div class="auth-form__group">
+								<input type="text" class="auth-form__input" placeholder="Nhập email" />
+							</div>
+							<div class="auth-form__group">
+								<input type="password" class="auth-form__input" placeholder="Mật khẩu của bạn" />
+							</div>
+						</div>
+						<div class="auth-form__aside">
+							<div class="auth-form__help">
+								<a href="#" class="auth-form__help-link">Quên mật khẩu</a>
+								<a href="#" class="auth-form__help-link">Cần trợ giúp?</a>
+							</div>
+						</div>
+						<div class="auth-form__controls">
+							<button class="btn">TRỞ LẠI</button>
+							<button class="btn btn--primary">ĐĂNG NHẬP</button>
+						</div>
+					</div>
+					<div class="auth-form__socials">
+						<a href="" class="btn btn--size-s btn--with-icon auth-form__socials--facebook">
+							<i class="fab fa-facebook-square auth-form__socials--icon"></i>
+							<span class="auth-form__socials--text">Đăng nhập với Facebook</span></a
+						>
+						<a href="" class="btn btn--size-s btn--with-icon auth-form__socials--google">
+							<i class="fab fa-google auth-form__socials--"></i>
+							<span class="auth-form__socials--text">Đăng nhập với Google</span></a
+						>
+					</div>
+				</div> -->
+		<!-- </div>
+		</div> -->
 	</body>
 </html>
