--- a/index.html
+++ b/index.html
@@ -123,10 +123,28 @@
 								</g>
 							</svg>
 						</div>
-						<div class="header__search"></div>
+						<div class="header__search">
+							<input type="text" class="header__search-input" placeholder="Nhập để tìm kiếm" />
+							<div class="header__search-select">
+								<span class="header__search-label">Trong shop</span>
+								<i class="header__search-icon fas fa-chevron-down"></i>
+								<ul class="header__search-option">
+									<li class="header__search-option-item header__search-option-item--active">
+										<span>Trong shop</span>
+										<i class="fas fa-check"></i>
+									</li>
+									<li class="header__search-option-item">
+										<span>Ngoài shop</span>
+										<i class="fas fa-check"></i>
+									</li>
+								</ul>
+							</div>
+							<button class="header__search-btn">
+								<i class="header__search-btn-icon fas fa-search"></i>
+							</button>
+						</div>
 						<div class="header__cart">
 							<i class="header__card-icon fas fa-cart-plus"></i>
-							</svg>
 						</div>
 					</div>
 				</div>
