--- a/index.html
+++ b/index.html
@@ -124,7 +124,20 @@
 							</svg>
 						</div>
 						<div class="header__search">
-							<input type="text" class="header__search-input" placeholder="Nhập để tìm kiếm" />
+							<div class="header__search-input-wrap">
+								<input type="text" class="header__search-input" placeholder="Nhập để tìm kiếm" />
+								<div class="header__search-history">
+									<h3 class="header__search-history-heading">Lịch sử tìm kiếm</h3>
+									<ul class="header__search-history-list">
+										<li class="header__search-history-item">
+											<a href="">Kem dưỡng da</a>
+										</li>
+										<li class="header__search-history-item">
+											<a href="">Kem trị mụn</a>
+										</li>
+									</ul>
+								</div>
+							</div>
 							<div class="header__search-select">
 								<span class="header__search-label">Trong shop</span>
 								<i class="header__search-icon fas fa-chevron-down"></i>
