--- a/index.html
+++ b/index.html
@@ -157,7 +157,13 @@
 							</button>
 						</div>
 						<div class="header__cart">
-							<i class="header__card-icon fas fa-cart-plus"></i>
+							<div class="header__cart-wrap">
+								<i class="header__card-icon fas fa-cart-plus"></i>
+								<div class="header__cart-list header__cart-list--no-cart">
+									<img src="./assets/img/cart-empty.png" alt="" class="header__cart-no-card-img" />
+									<p class="header__cart-list--no-cart-text">Chưa có sản phẩm</p>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
