huy23_header_cart_badge 1. viet css hide cart no item 2. Css badge cho cart

--- a/index.html
+++ b/index.html
@@ -159,7 +159,9 @@
 						<div class="header__cart">
 							<div class="header__cart-wrap">
 								<i class="header__card-icon fas fa-cart-plus"></i>
-								<div class="header__cart-list header__cart-list--no-cart">
+								<span class="header__card-notice">3</span>
+								<!-- <div class="header__cart-list header__cart-list--no-cart"> -->
+								<div class="header__cart-list">
 									<img src="./assets/img/cart-empty.png" alt="" class="header__cart-no-card-img" />
 									<p class="header__cart-list--no-cart-text">Chưa có sản phẩm</p>
 								</div>
