huy24_header_cart_list_prod Thiet ke gio hang da co san pham

--- a/index.html
+++ b/index.html
@@ -161,9 +161,77 @@
 								<i class="header__card-icon fas fa-cart-plus"></i>
 								<span class="header__card-notice">3</span>
 								<!-- <div class="header__cart-list header__cart-list--no-cart"> -->
-								<div class="header__cart-list">
+								<div class="header__cart-list header__cart-list--has-cart">
 									<img src="./assets/img/cart-empty.png" alt="" class="header__cart-no-card-img" />
 									<p class="header__cart-list--no-cart-text">Chưa có sản phẩm</p>
+
+									<h4 class="header__cart-heading">Sản Phẩm Đã Thêm</h4>
+									<ul class="header__cart-list-item">
+										<li class="header__cart-item">
+											<img
+												src="https://cf.shopee.vn/file/75ea42f9eca124e9cb3cde744c060e4d_tn"
+												alt=""
+												class="header__cart-img"
+											/>
+											<div class="header__cart-info">
+												<div class="header__cart-item-head">
+													<h5 class="header__cart-item-name">Bộ kem đặc trị vùng mắt</h5>
+													<div class="header__cart-item-price-wrap">
+														<span class="header__cart-item-price">2.000.000đ</span>
+														<span class="header__cart-item-multipl">x</span>
+														<span class="header__cart-item-quantity">2</span>
+													</div>
+												</div>
+												<div class="header__cart-item-body">
+													<span class="header__cart-item-desc">Phân loại: Bạc</span>
+													<span class="header__cart-item-delete">Xoá</span>
+												</div>
+											</div>
+										</li>
+										<li class="header__cart-item">
+											<img
+												src="https://cf.shopee.vn/file/05ddd24cc82016996788c62fbe22db9a"
+												alt=""
+												class="header__cart-img"
+											/>
+											<div class="header__cart-info">
+												<div class="header__cart-item-head">
+													<h5 class="header__cart-item-name">Bộ kem đặc trị vùng mắt</h5>
+													<div class="header__cart-item-price-wrap">
+														<span class="header__cart-item-price">2.000.000đ</span>
+														<span class="header__cart-item-multipl">x</span>
+														<span class="header__cart-item-quantity">2</span>
+													</div>
+												</div>
+												<div class="header__cart-item-body">
+													<span class="header__cart-item-desc">Phân loại: Bạc</span>
+													<span class="header__cart-item-delete">Xoá</span>
+												</div>
+											</div>
+										</li>
+										<li class="header__cart-item">
+											<img
+												src="https://cf.shopee.vn/file/3fb459e3449905545701b418e8220334_tn"
+												alt=""
+												class="header__cart-img"
+											/>
+											<div class="header__cart-info">
+												<div class="header__cart-item-head">
+													<h5 class="header__cart-item-name">Bộ kem đặc trị vùng mắt</h5>
+													<div class="header__cart-item-price-wrap">
+														<span class="header__cart-item-price">2.000.000đ</span>
+														<span class="header__cart-item-multipl">x</span>
+														<span class="header__cart-item-quantity">2</span>
+													</div>
+												</div>
+												<div class="header__cart-item-body">
+													<span class="header__cart-item-desc">Phân loại: Bạc</span>
+													<span class="header__cart-item-delete">Xoá</span>
+												</div>
+											</div>
+										</li>
+									</ul>
+									<button class="btn btn--primary header__cart-view-cart">Xem giỏ hàng</button>
 								</div>
 							</div>
 						</div>
