--- a/index.html
+++ b/index.html
@@ -107,8 +107,26 @@
 									Trợ giúp</a
 								>
 							</li>
-							<li class="header__navbar-item header__navbar-item--strong header__navbar-item--separate">Đăng kí</li>
-							<li class="header__navbar-item header__navbar-item--strong">Đăng nhập</li>
+							<!-- <li class="header__navbar-item header__navbar-item--strong header__navbar-item--separate">Đăng kí</li>
+							<li class="header__navbar-item header__navbar-item--strong">Đăng nhập</li> -->
+							<li class="header__navbar-item header__navbar-user">
+								<img
+									src="https://cf.shopee.vn/file/b6cb5983ab6ec47f6c95d6bd429c2db6_tn"
+									alt=""
+									class="header__navbar-user-img"
+								/>
+								<span class="header__navbar-user-name">Huy dz vl</span>
+								<div class="header__navbar-user-menu">
+									<ul class="header__navbar-user-list">
+										<li class="header__navbar-user-item"><a href="#">Tài khoản của tôi</a></li>
+										<li class="header__navbar-user-item"><a href="#">Địa chỉ của tôi</a></li>
+										<li class="header__navbar-user-item"><a href="#">Đơn mua</a></li>
+										<li class="header__navbar-user-item">
+											<a class="header__navbar-user-link-logout" href="#">Đăng xuất</a>
+										</li>
+									</ul>
+								</div>
+							</li>
 						</ul>
 					</nav>
 					<!-- Header with search -->
