--- a/index.html
+++ b/index.html
@@ -256,7 +256,28 @@
 					</div>
 				</div>
 			</header>
-			<div class="container"></div>
+			<div class="container">
+				<nav class="category">
+					<h3 class="category__heading">
+						<i class="fas fa-list"></i>
+						Danh mục
+					</h3>
+					<ul class="category-list">
+						<li class="category-item category-item--active">
+							<a href="#" class="category-item__link">Trang điểm mặt</a>
+						</li>
+						<li class="category-item">
+							<a href="#" class="category-item__link">Trang điểm môi</a>
+						</li>
+						<li class="category-item">
+							<a href="#" class="category-item__link">Trang điểm mắt</a>
+						</li>
+						<li class="category-item">
+							<a href="#" class="category-item__link">Trang điểm đít</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
 			<footer class="header__navbar-icon footer"></footer>
 		</div>
 		<!-- Modal layout -->
