--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 			</header>
 			<div class="app__container">
 				<div class="grid">
-					<div class="grid__row">
+					<div class="grid__row app__content">
 						<div class="grid__column-2">
 							<nav class="category">
 								<h3 class="category__heading">
@@ -281,7 +281,28 @@
 								</ul>
 							</nav>
 						</div>
-						<div class="grid__column-10"></div>
+						<div class="grid__column-10">
+							<div class="home-filter">
+								<span class="home-filter__label">Sắp xếp theo</span>
+								<button class="btn">Phổ biến</button>
+								<button class="btn btn--primary">Mới nhất</button>
+								<button class="btn">Bán chạy</button>
+								<div class="select-input">
+									<span class="select-input__label">Giá</span>
+									<i class="header__search-icon fas fa-chevron-down"></i>
+								</div>
+								<div class="home-filter__page">
+									<span class="home-filter__page-num">
+										<span class="home-filter__page-current">1</span>/
+										<span class="home-filter__page-total">14</span></span
+									>
+									<div class="home-filter__page-control">
+										<a href="" class="btn"><i class="fas fa-chevron-left"></i></a>
+										<a href="" class="btn"><i class="fas fa-chevron-right"></i></a>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
