--- a/index.html
+++ b/index.html
@@ -315,6 +315,48 @@
 									</div>
 								</div>
 							</div>
+							<div class="home-product">
+								<div class="grid__row">
+									<div class="grid__column-2">
+										<!-- Product Item -->
+										<div class="home-product-item">
+											<div
+												class="home-product-item__img"
+												style="background-image: url(https://cf.shopee.vn/file/f03a91132ed1fd13bd36e704f4a52b6e_tn)"
+											></div>
+											<h4 class="home-product-item__name">Bàn phím giả cơ Newmen GM100</h4>
+											<div class="home-product-item__price">
+												<span class="home-product-item__price-old">1.200.000đ</span>
+												<span class="home-product-item__price-current">900.000đ</span>
+											</div>
+											<div class="home-product-item__action">
+												<span class="home-product-item__action-like">
+													<i class="far fa-heart"></i>
+												</span>
+												<div class="home-product-item__action-rating">
+													<i class="fas fa-star"></i>
+													<i class="fas fa-star"></i>
+													<i class="fas fa-star"></i>
+													<i class="fas fa-star"></i>
+													<i class="fas fa-star"></i>
+												</div>
+											</div>
+											<div class="home-product-item__origin">
+												<span class="home-product-item__brand">Xưởng cơ khí</span>
+												<span class="home-product-item__origin-name">Việt Nam</span>
+											</div>
+											<div class="home-product-item__favourite">
+												<i class="fas fa-check"></i>
+												Yêu thích
+											</div>
+											<div class="home-product-item__sale-off">
+												<span class="home-product-item__sale-off-percent">20%</span>
+												<span class="home-product-item__sale-off-label">GIẢM</span>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
