--- a/index.html
+++ b/index.html
@@ -317,14 +317,14 @@
 							</div>
 							<div class="home-product">
 								<div class="grid__row">
-									<div class="grid__column-2">
+									<div class="grid__column-2-4">
 										<!-- Product Item -->
 										<div class="home-product-item">
 											<div
 												class="home-product-item__img"
 												style="background-image: url(https://cf.shopee.vn/file/f03a91132ed1fd13bd36e704f4a52b6e_tn)"
 											></div>
-											<h4 class="home-product-item__name">Bàn phím giả cơ Newmen GM100</h4>
+											<h4 class="home-product-item__name">Bàn phím giả cơ Newmen Bàn phím giả cơ Newmen GM100</h4>
 											<div class="home-product-item__price">
 												<span class="home-product-item__price-old">1.200.000đ</span>
 												<span class="home-product-item__price-current">900.000đ</span>
