huy32_css_product_area_p2

--- a/index.html
+++ b/index.html
@@ -330,8 +330,10 @@
 												<span class="home-product-item__price-current">900.000đ</span>
 											</div>
 											<div class="home-product-item__action">
-												<span class="home-product-item__action-like">
-													<i class="far fa-heart"></i>
+												<!-- like add class: home-product-item__like--liked -->
+												<span class="home-product-item__like home-product-item__like--liked">
+													<i class="home-product-item__action-like-icon-empty far fa-heart"></i>
+													<i class="home-product-item__action-like-icon-fill fas fa-heart"></i>
 												</span>
 												<div class="home-product-item__action-rating">
 													<i class="fas fa-star"></i>
