--- a/index.html
+++ b/index.html
@@ -336,12 +336,13 @@
 													<i class="home-product-item__action-like-icon-fill fas fa-heart"></i>
 												</span>
 												<div class="home-product-item__action-rating">
-													<i class="fas fa-star"></i>
-													<i class="fas fa-star"></i>
-													<i class="fas fa-star"></i>
-													<i class="fas fa-star"></i>
+													<i class="home-product-item__star--gold fas fa-star"></i>
+													<i class="home-product-item__star--gold fas fa-star"></i>
+													<i class="home-product-item__star--gold fas fa-star"></i>
+													<i class="home-product-item__star--gold fas fa-star"></i>
 													<i class="fas fa-star"></i>
 												</div>
+												<span class="home-product-item__sold">88 đã bán </span>
 											</div>
 											<div class="home-product-item__origin">
 												<span class="home-product-item__brand">Xưởng cơ khí</span>
