--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 								<div class="grid__row">
 									<div class="grid__column-2-4">
 										<!-- Product Item -->
-										<div class="home-product-item">
+										<a class="home-product-item" href="#">
 											<div
 												class="home-product-item__img"
 												style="background-image: url(https://cf.shopee.vn/file/f03a91132ed1fd13bd36e704f4a52b6e_tn)"
@@ -356,7 +356,7 @@
 												<span class="home-product-item__sale-off-percent">20%</span>
 												<span class="home-product-item__sale-off-label">GIẢM</span>
 											</div>
-										</div>
+										</a>
 									</div>
 								</div>
 							</div>
