--- a/index.html
+++ b/index.html
@@ -855,7 +855,87 @@
 					</div>
 				</div>
 			</div>
-			<footer class="header__navbar-icon footer"></footer>
+			<footer class="footer">
+				<div class="grid">
+					<div class="grid__row">
+						<div class="grid__column-2-4">
+							<h3 class="footer__heading">Chăm sóc khách hàng</h3>
+							<ul class="footer-list">
+								<li class="footer-item">
+									<a href="#" class="footer-item__link">Trung Tâm Trợ Giúp</a>
+								</li>
+								<li class="footer-item">
+									<a href="#" class="footer-item__link">TickID Mall</a>
+								</li>
+								<li class="footer-item">
+									<a href="#" class="footer-item__link">Hướng Dẫn Mua Hàng</a>
+								</li>
+							</ul>
+						</div>
+						<div class="grid__column-2-4">
+							<h3 class="footer__heading">Về Tickid</h3>
+							<ul class="footer-list">
+								<li class="footer-item">
+									<a href="#" class="footer-item__link">Giới Thiệu Về TickID Việt Nam</a>
+								</li>
+								<li class="footer-item">
+									<a href="#" class="footer-item__link">Tuyển Dụng</a>
+								</li>
+								<li class="footer-item">
+									<a href="#" class="footer-item__link">Điều Khoản TickID</a>
+								</li>
+							</ul>
+						</div>
+						<div class="grid__column-2-4">
+							<h3 class="footer__heading">Danh mục</h3>
+							<ul class="footer-list">
+								<li class="footer-item">
+									<a href="#" class="footer-item__link">Giới Thiệu Về TickID Việt Nam</a>
+								</li>
+								<li class="footer-item">
+									<a href="#" class="footer-item__link">Tuyển Dụng</a>
+								</li>
+								<li class="footer-item">
+									<a href="#" class="footer-item__link">Điều Khoản TickID</a>
+								</li>
+							</ul>
+						</div>
+						<div class="grid__column-2-4">
+							<h3 class="footer__heading">Theo dõi chúng tôi trên</h3>
+							<ul class="footer-list">
+								<li class="footer-item">
+									<a href="#" class="footer-item__link">
+										<i class="fab fa-facebook"></i>
+										Facebook</a
+									>
+								</li>
+								<li class="footer-item">
+									<a href="#" class="footer-item__link">
+										<i class="fab fa-instagram"></i>
+										Instagram</a
+									>
+								</li>
+								<li class="footer-item">
+									<a href="#" class="footer-item__link">
+										<i class="fab fa-linkedin"></i>
+										LinkedIn</a
+									>
+								</li>
+							</ul>
+						</div>
+						<div class="grid__column-2-4">
+							<h3 class="footer__heading">Vào cửa hàng trên ứng dụng Tickid</h3>
+							<div class="footer__download">
+								<img src="/assets/img/qr_code.png" alt="" class="footer__download-qr" />
+								<div class="footer__download-apps">
+									<img src="/assets/img/app_store.png" alt="" class="footer__download-img" />
+									<img src="/assets/img/ch_play.png" alt="" class="footer__download-img" />
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</footer>
 		</div>
 		<!-- Modal layout -->
 		<!-- <div class="modal">
