huy38_footer_css

--- a/index.html
+++ b/index.html
@@ -928,8 +928,12 @@
 							<div class="footer__download">
 								<img src="/assets/img/qr_code.png" alt="" class="footer__download-qr" />
 								<div class="footer__download-apps">
-									<img src="/assets/img/app_store.png" alt="" class="footer__download-img" />
-									<img src="/assets/img/ch_play.png" alt="" class="footer__download-img" />
+									<a href="#" class="footer__download-apps-link">
+										<img src="/assets/img/app_store.png" alt="" class="footer__download-img"
+									/></a>
+									<a href="#" class="footer__download-apps-link">
+										<img src="/assets/img/ch_play.png" alt="" class="footer__download-img"
+									/></a>
 								</div>
 							</div>
 						</div>
