--- a/index.html
+++ b/index.html
@@ -2,16 +2,44 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			http-equiv="X-UA-Compatible"
+			content="IE=edge"
+		/>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
 		<title>F8 Shop</title>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-		<link rel="stylesheet" href="./assets/css/base.css" />
-		<link rel="stylesheet" href="./assets/css/main.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="./assets/fonts/fontawesome-free-5.15.4/css/all.min.css" rel="stylesheet" />
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="./assets/css/base.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="./assets/css/main.css"
+		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.googleapis.com"
+		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+			crossorigin
+		/>
+		<link
+			href="./assets/fonts/fontawesome-free-5.15.4/css/all.min.css"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<div class="app">
@@ -22,27 +50,52 @@
 							<li class="header__navbar-item header__navbar-item--separate">
 								Vào cửa hàng trên ứng dụng F8-Shop
 								<div class="header__qr">
-									<img src="./assets/img/qr_code.png" alt="QR code" class="header__qr-img" />
+									<img
+										src="./assets/img/qr_code.png"
+										alt="QR code"
+										class="header__qr-img"
+									/>
 									<div class="header__qr-apps">
-										<a class="header__qr-link" href=""
-											><img src="./assets/img/app_store.png" alt="App Store" class="header__qr-download-img"
+										<a
+											class="header__qr-link"
+											href=""
+											><img
+												src="./assets/img/app_store.png"
+												alt="App Store"
+												class="header__qr-download-img"
 										/></a>
-										<a class="header__qr-link" href=""
-											><img src="./assets/img/ch_play.png" alt="Google Play Store" class="header__qr-download-img"
+										<a
+											class="header__qr-link"
+											href=""
+											><img
+												src="./assets/img/ch_play.png"
+												alt="Google Play Store"
+												class="header__qr-download-img"
 										/></a>
 									</div>
 								</div>
 							</li>
 							<li class="header__navbar-item">
 								<span class="header__navbar-icon--no-pointer">Kết nối</span>
-								<a href="" class="header__navbar-icon-link"><i class="header__navbar-icon fab fa-facebook"></i></a>
-								<a href="" class="header__navbar-icon-link"><i class="header__navbar-icon fab fa-instagram"></i></a>
+								<a
+									href=""
+									class="header__navbar-icon-link"
+									><i class="header__navbar-icon fab fa-facebook"></i
+								></a>
+								<a
+									href=""
+									class="header__navbar-icon-link"
+									><i class="header__navbar-icon fab fa-instagram"></i
+								></a>
 							</li>
 							<li></li>
 						</ul>
 						<ul class="header__navbar-list">
 							<li class="header__navbar-item">
-								<a href="" class="header__navbar-item-link">
+								<a
+									href=""
+									class="header__navbar-item-link"
+								>
 									<i class="header__navbar-icon fas fa-bell"></i>
 									Thông báo</a
 								>
@@ -52,7 +105,10 @@
 									</header>
 									<ul class="header__notify-list">
 										<li class="header__notify-item header__notify-item--viewed">
-											<a href="" class="header__notify-link">
+											<a
+												href=""
+												class="header__notify-link"
+											>
 												<img
 													src="https://cf.shopee.vn/file/978b9e4cb61c611aaaf58664fae133c5_tn"
 													alt="Ảnh sản phẩm"
@@ -65,7 +121,10 @@
 											</a>
 										</li>
 										<li class="header__notify-item">
-											<a href="" class="header__notify-link">
+											<a
+												href=""
+												class="header__notify-link"
+											>
 												<img
 													src="https://cf.shopee.vn/file/86c294aae72ca1db5f541790f7796260_tn"
 													alt="Ảnh sản phẩm"
@@ -80,7 +139,10 @@
 											</a>
 										</li>
 										<li class="header__notify-item header__notify-item--viewed">
-											<a href="" class="header__notify-link">
+											<a
+												href=""
+												class="header__notify-link"
+											>
 												<img
 													src="https://cf.shopee.vn/file/bf87b50b463f646bb7fb8a1a606d9ed2_tn"
 													alt="Ảnh sản phẩm"
@@ -97,12 +159,19 @@
 										</li>
 									</ul>
 									<footer class="header__notify-footer">
-										<a href="" class="header__notify-footer-btn">Xem tất cả</a>
+										<a
+											href=""
+											class="header__notify-footer-btn"
+											>Xem tất cả</a
+										>
 									</footer>
 								</div>
 							</li>
 							<li class="header__navbar-item">
-								<a href="" class="header__navbar-item-link">
+								<a
+									href=""
+									class="header__navbar-item-link"
+								>
 									<i class="header__navbar-icon far fa-question-circle"></i>
 									Trợ giúp</a
 								>
@@ -122,7 +191,11 @@
 										<li class="header__navbar-user-item"><a href="#">Địa chỉ của tôi</a></li>
 										<li class="header__navbar-user-item"><a href="#">Đơn mua</a></li>
 										<li class="header__navbar-user-item">
-											<a class="header__navbar-user-link-logout" href="#">Đăng xuất</a>
+											<a
+												class="header__navbar-user-link-logout"
+												href="#"
+												>Đăng xuất</a
+											>
 										</li>
 									</ul>
 								</div>
@@ -132,7 +205,10 @@
 					<!-- Header with search -->
 					<div class="header-with-search">
 						<div class="header__logo">
-							<svg viewBox="0 0 192 65" class="header__logo-img">
+							<svg
+								viewBox="0 0 192 65"
+								class="header__logo-img"
+							>
 								<g fill-rule="evenodd">
 									<path
 										fill="#fff"
@@ -143,7 +219,11 @@
 						</div>
 						<div class="header__search">
 							<div class="header__search-input-wrap">
-								<input type="text" class="header__search-input" placeholder="Nhập để tìm kiếm" />
+								<input
+									type="text"
+									class="header__search-input"
+									placeholder="Nhập để tìm kiếm"
+								/>
 								<div class="header__search-history">
 									<h3 class="header__search-history-heading">Lịch sử tìm kiếm</h3>
 									<ul class="header__search-history-list">
@@ -180,7 +260,11 @@
 								<span class="header__card-notice">3</span>
 								<!-- <div class="header__cart-list header__cart-list--no-cart"> -->
 								<div class="header__cart-list header__cart-list--has-cart">
-									<img src="./assets/img/cart-empty.png" alt="" class="header__cart-no-card-img" />
+									<img
+										src="./assets/img/cart-empty.png"
+										alt=""
+										class="header__cart-no-card-img"
+									/>
 									<p class="header__cart-list--no-cart-text">Chưa có sản phẩm</p>
 
 									<h4 class="header__cart-heading">Sản Phẩm Đã Thêm</h4>
@@ -522,16 +606,32 @@
 								</h3>
 								<ul class="category-list">
 									<li class="category-item category-item--active">
-										<a href="#" class="category-item__link">Trang điểm mặt</a>
+										<a
+											href="#"
+											class="category-item__link"
+											>Trang điểm mặt</a
+										>
 									</li>
 									<li class="category-item">
-										<a href="#" class="category-item__link">Trang điểm môi</a>
+										<a
+											href="#"
+											class="category-item__link"
+											>Trang điểm môi</a
+										>
 									</li>
 									<li class="category-item">
-										<a href="#" class="category-item__link">Trang điểm mắt</a>
+										<a
+											href="#"
+											class="category-item__link"
+											>Trang điểm mắt</a
+										>
 									</li>
 									<li class="category-item">
-										<a href="#" class="category-item__link">Trang điểm đít</a>
+										<a
+											href="#"
+											class="category-item__link"
+											>Trang điểm đít</a
+										>
 									</li>
 								</ul>
 							</nav>
@@ -547,10 +647,18 @@
 									<i class="select-input-icon fas fa-chevron-down"></i>
 									<ul class="select-input__list">
 										<li class="select-input__item">
-											<a href="#" class="select-input__link">Giá: Thấp đến cao</a>
+											<a
+												href="#"
+												class="select-input__link"
+												>Giá: Thấp đến cao</a
+											>
 										</li>
 										<li class="select-input__item">
-											<a href="#" class="select-input__link">Giá: Cao đến thấp</a>
+											<a
+												href="#"
+												class="select-input__link"
+												>Giá: Cao đến thấp</a
+											>
 										</li>
 									</ul>
 								</div>
@@ -561,10 +669,14 @@
 										></span
 									>
 									<div class="home-filter__page-control">
-										<a href="" class="home-filter__page-btn home-filter__page-btn--disabled"
+										<a
+											href=""
+											class="home-filter__page-btn home-filter__page-btn--disabled"
 											><i class="home-filter__page-icon fas fa-chevron-left"></i
 										></a>
-										<a href="" class="home-filter__page-btn"
+										<a
+											href=""
+											class="home-filter__page-btn"
 											><i class="home-filter__page-icon fas fa-chevron-right"></i
 										></a>
 									</div>
@@ -574,7 +686,10 @@
 								<div class="grid__row">
 									<div class="grid__column-2-4">
 										<!-- Product Item -->
-										<a class="home-product-item" href="#">
+										<a
+											class="home-product-item"
+											href="#"
+										>
 											<div
 												class="home-product-item__img"
 												style="background-image: url(https://cf.shopee.vn/file/f03a91132ed1fd13bd36e704f4a52b6e_tn)"
@@ -615,7 +730,10 @@
 									</div>
 									<div class="grid__column-2-4">
 										<!-- Product Item -->
-										<a class="home-product-item" href="#">
+										<a
+											class="home-product-item"
+											href="#"
+										>
 											<div
 												class="home-product-item__img"
 												style="background-image: url(https://cf.shopee.vn/file/f03a91132ed1fd13bd36e704f4a52b6e_tn)"
@@ -656,7 +774,10 @@
 									</div>
 									<div class="grid__column-2-4">
 										<!-- Product Item -->
-										<a class="home-product-item" href="#">
+										<a
+											class="home-product-item"
+											href="#"
+										>
 											<div
 												class="home-product-item__img"
 												style="background-image: url(https://cf.shopee.vn/file/f03a91132ed1fd13bd36e704f4a52b6e_tn)"
@@ -697,7 +818,10 @@
 									</div>
 									<div class="grid__column-2-4">
 										<!-- Product Item -->
-										<a class="home-product-item" href="#">
+										<a
+											class="home-product-item"
+											href="#"
+										>
 											<div
 												class="home-product-item__img"
 												style="background-image: url(https://cf.shopee.vn/file/f03a91132ed1fd13bd36e704f4a52b6e_tn)"
@@ -738,7 +862,10 @@
 									</div>
 									<div class="grid__column-2-4">
 										<!-- Product Item -->
-										<a class="home-product-item" href="#">
+										<a
+											class="home-product-item"
+											href="#"
+										>
 											<div
 												class="home-product-item__img"
 												style="background-image: url(https://cf.shopee.vn/file/f03a91132ed1fd13bd36e704f4a52b6e_tn)"
@@ -779,7 +906,10 @@
 									</div>
 									<div class="grid__column-2-4">
 										<!-- Product Item -->
-										<a class="home-product-item" href="#">
+										<a
+											class="home-product-item"
+											href="#"
+										>
 											<div
 												class="home-product-item__img"
 												style="background-image: url(https://cf.shopee.vn/file/f03a91132ed1fd13bd36e704f4a52b6e_tn)"
@@ -822,31 +952,67 @@
 							</div>
 							<ul class="pagination home-pagination">
 								<li class="pagination-item">
-									<a href="" class="pagination-item__link">
+									<a
+										href=""
+										class="pagination-item__link"
+									>
 										<i class="pagination-item__icon fas fa-chevron-left"></i>
 									</a>
 								</li>
 								<li class="pagination-item pagination-item--active">
-									<a href="" class="pagination-item__link">1 </a>
+									<a
+										href=""
+										class="pagination-item__link"
+										>1
+									</a>
 								</li>
 								<li class="pagination-item">
-									<a href="" class="pagination-item__link">2 </a>
+									<a
+										href=""
+										class="pagination-item__link"
+										>2
+									</a>
 								</li>
 								<li class="pagination-item">
-									<a href="" class="pagination-item__link">3 </a>
+									<a
+										href=""
+										class="pagination-item__link"
+										>3
+									</a>
 								</li>
 								<li class="pagination-item">
-									<a href="" class="pagination-item__link">4 </a>
+									<a
+										href=""
+										class="pagination-item__link"
+										>4
+									</a>
 								</li>
 								<li class="pagination-item">
-									<a href="" class="pagination-item__link">5 </a>
+									<a
+										href=""
+										class="pagination-item__link"
+										>5
+									</a>
 								</li>
-								<li class="pagination-item"><a href="" class="pagination-item__link">...</a></li>
 								<li class="pagination-item">
-									<a href="" class="pagination-item__link">14 </a>
+									<a
+										href=""
+										class="pagination-item__link"
+										>...</a
+									>
 								</li>
 								<li class="pagination-item">
-									<a href="" class="pagination-item__link">
+									<a
+										href=""
+										class="pagination-item__link"
+										>14
+									</a>
+								</li>
+								<li class="pagination-item">
+									<a
+										href=""
+										class="pagination-item__link"
+									>
 										<i class="pagination-item__icon fas fa-chevron-right"></i>
 									</a>
 								</li>
@@ -862,13 +1028,25 @@
 							<h3 class="footer__heading">Chăm sóc khách hàng</h3>
 							<ul class="footer-list">
 								<li class="footer-item">
-									<a href="#" class="footer-item__link">Trung Tâm Trợ Giúp</a>
+									<a
+										href="#"
+										class="footer-item__link"
+										>Trung Tâm Trợ Giúp</a
+									>
 								</li>
 								<li class="footer-item">
-									<a href="#" class="footer-item__link">TickID Mall</a>
+									<a
+										href="#"
+										class="footer-item__link"
+										>TickID Mall</a
+									>
 								</li>
 								<li class="footer-item">
-									<a href="#" class="footer-item__link">Hướng Dẫn Mua Hàng</a>
+									<a
+										href="#"
+										class="footer-item__link"
+										>Hướng Dẫn Mua Hàng</a
+									>
 								</li>
 							</ul>
 						</div>
@@ -876,13 +1054,25 @@
 							<h3 class="footer__heading">Về Tickid</h3>
 							<ul class="footer-list">
 								<li class="footer-item">
-									<a href="#" class="footer-item__link">Giới Thiệu Về TickID Việt Nam</a>
+									<a
+										href="#"
+										class="footer-item__link"
+										>Giới Thiệu Về TickID Việt Nam</a
+									>
 								</li>
 								<li class="footer-item">
-									<a href="#" class="footer-item__link">Tuyển Dụng</a>
+									<a
+										href="#"
+										class="footer-item__link"
+										>Tuyển Dụng</a
+									>
 								</li>
 								<li class="footer-item">
-									<a href="#" class="footer-item__link">Điều Khoản TickID</a>
+									<a
+										href="#"
+										class="footer-item__link"
+										>Điều Khoản TickID</a
+									>
 								</li>
 							</ul>
 						</div>
@@ -890,13 +1080,25 @@
 							<h3 class="footer__heading">Danh mục</h3>
 							<ul class="footer-list">
 								<li class="footer-item">
-									<a href="#" class="footer-item__link">Giới Thiệu Về TickID Việt Nam</a>
+									<a
+										href="#"
+										class="footer-item__link"
+										>Giới Thiệu Về TickID Việt Nam</a
+									>
 								</li>
 								<li class="footer-item">
-									<a href="#" class="footer-item__link">Tuyển Dụng</a>
+									<a
+										href="#"
+										class="footer-item__link"
+										>Tuyển Dụng</a
+									>
 								</li>
 								<li class="footer-item">
-									<a href="#" class="footer-item__link">Điều Khoản TickID</a>
+									<a
+										href="#"
+										class="footer-item__link"
+										>Điều Khoản TickID</a
+									>
 								</li>
 							</ul>
 						</div>
@@ -904,19 +1106,28 @@
 							<h3 class="footer__heading">Theo dõi chúng tôi trên</h3>
 							<ul class="footer-list">
 								<li class="footer-item">
-									<a href="#" class="footer-item__link">
+									<a
+										href="#"
+										class="footer-item__link"
+									>
 										<i class="fab fa-facebook"></i>
 										Facebook</a
 									>
 								</li>
 								<li class="footer-item">
-									<a href="#" class="footer-item__link">
+									<a
+										href="#"
+										class="footer-item__link"
+									>
 										<i class="fab fa-instagram"></i>
 										Instagram</a
 									>
 								</li>
 								<li class="footer-item">
-									<a href="#" class="footer-item__link">
+									<a
+										href="#"
+										class="footer-item__link"
+									>
 										<i class="fab fa-linkedin"></i>
 										LinkedIn</a
 									>
@@ -926,13 +1137,29 @@
 						<div class="grid__column-2-4">
 							<h3 class="footer__heading">Vào cửa hàng trên ứng dụng Tickid</h3>
 							<div class="footer__download">
-								<img src="/assets/img/qr_code.png" alt="" class="footer__download-qr" />
+								<img
+									src="/assets/img/qr_code.png"
+									alt=""
+									class="footer__download-qr"
+								/>
 								<div class="footer__download-apps">
-									<a href="#" class="footer__download-apps-link">
-										<img src="/assets/img/app_store.png" alt="" class="footer__download-img"
+									<a
+										href="#"
+										class="footer__download-apps-link"
+									>
+										<img
+											src="/assets/img/app_store.png"
+											alt=""
+											class="footer__download-img"
 									/></a>
-									<a href="#" class="footer__download-apps-link">
-										<img src="/assets/img/ch_play.png" alt="" class="footer__download-img"
+									<a
+										href="#"
+										class="footer__download-apps-link"
+									>
+										<img
+											src="/assets/img/ch_play.png"
+											alt=""
+											class="footer__download-img"
 									/></a>
 								</div>
 							</div>
